<resources>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Add_acticityTitle">Add Items</string>
    <string name="add_menu">Menu</string>
    <string name="add_update">Update</string>
    <string name="add_Ongoin">Ongoing Orders</string>
    <string name="Login">Login</string>
    <string name="User_name">User name</string>
    <string name="Password">Password</string>
    <string name="LoginP">Login</string>
    <string name="Name">Name :</string>
    <string name="Price">Price :</string>
    <string name="Content">Content :</string>
    <string name="Add_button">ADD</string>
    <string name="Login_button">Login</string>
    <string name="Cart_button">Cart</string>
    <string name="Add_cart">Add cart</string>
    <string name="View">View details</string>
    <string name="pizza1">Peparoni Pizza</string>
    <string name="pizza2">Cheese Chicken Pizza</string>
    <string name="pizza3">Cheese onion Pizza</string>
    <string name="pizza4">Devil chicken Pizza</string>
    <string name="Add_Mbutton">Add menu Item</string>
    <string name="mssage">Please tell yourdelivery boy that he has come on 2nd floor because i am not available at
        home
    </string>
    <string name="NUmber">9478675984</string>
    <string name="Email">John123@gmail.</string>
    <string name="Address">440 Temple road,Galle,Srilanka</string>
    <string name="Item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="Price2">Price</string>
    <string name="size">2</string>
    <string name="Rs">Rs.2500.00</string>
    <string name="cnslOrder">Cancel Order</string>
    <string name="Call">Call</string>
    <string name="MAIL">Email</string>
    <string name="Navi">Navigate</string>
    <string name="NewORD">Refresh</string>
    <string name="ONGO">On Going Order</string>
    <string name="MENUU">Menu</string>
    <string name="NAMEE1">John Smith</string>
    <string name="NAME2">Kapil</string>
    <string name="CNSLBUT">Cancel</string>
    <string name="ACCBUT">Accept</string>

    //viewDetails
    <string name="view_Details_btn">VIEW DETAILS</string>
    <string name="Sausage_pizza">Sausage pizza</string>
    <string name="Greek_Pizza">Greek Pizza</string>
    <string name="Mexican_Taco">Mexican Taco</string>
    <string name="Add">Add Cart</string>
    //cart
    <string name="Qty">Qty</string>
    <string name="Size">Size</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    //pay1
    <string name="Name1">Name</string>
    <string name="Qty1">9 pieces</string>
    <string name="Address1">Address</string>
    <string name="Size1">Rs.1200</string>
    <string name="Visa_card_num">Visa card num</string>
    <string name="Cash">Cash</string>
    <string name="Payment">Pay</string>
    <string name="Home">Home</string>
    //view Detils
    <string name="Name3">Cheese Lovers</string>
    <string name="Describe">Rich Tomato souce with a triple layer of mozzarella cheese</string>
    <string name="Size3">9 pies</string>
    <string name="Size4">16 pies</string>
    <string name="Size5">24 pies</string>
    <string name="Price3">Rs.1200</string>
    <string name="Price4">Rs.2000</string>
    <string name="Price5">Rs.2800</string>
    <string name="Home1">Home</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="add_cart">Cart</string>
    <string name="add_pay">Pay</string>
    <string name="add_reg">Register</string>
    <string name="add_details">Details</string>
    //update
    <string name="name">Name</string>
    <string name="qty">Qty</string>
    <string name="address">Address</string>
    <string name="Visanum">Visa Num</string>
    <string name="Cash1">Cash</string>
    <string name="Update_Complete">Update</string>
    //Register
    <string name="Submit">Submit</string>

    <string name="cart">cart3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home2">Home2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="app_name">Home</string>
    <string name="foodname1">Name</string>
    <string name="foodPrice1">Price</string>
    <string name="foodcontent">Content</string>
    <string name="Add_Cart">Add Cart</string>
    <string name="menue">menue</string>
    <string name="itemName">itemName</string>
    <string name="itemPrice">itemPrice</string>
    <string name="itemDescrition">itemDescrition</string>
    <string name="AddToCart">/AddToCart</string>
    <string name="itemNo">itemNo</string>
    <string name="priceInRuppees">priceInRuppees</string>


    //cv
    <string name="btnEdit">btnEdit</string>
    <string name="RemoveButton">RemoveButton</string>

</resources>
